tests/semantic/valid/02_variables.src
fn main() -> int {
    int x = 10;
    int y = 20;
    return x + y;
}
