tests/semantic/invalid/06_string_to_int.src
fn main() -> int {
    int x = "hello";
    return x;
}
